# ole-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  test.sh
.github/workflows/: linux_arm.yml  linux_x86_64.yml  macos.yml  windows.yml
common/: Cargo.toml
common/src/: constants.rs  ftype.rs  header.rs  lib.rs  util.rs
common/src/encryption/: excel.rs  mod.rs  ooxml.rs  powerpoint.rs  word.rs
examples/: main.rs
olecli/: Cargo.toml
olecli/src/: main.rs
oleid/: Cargo.toml
oleid/src/: main.rs  oleid.rs
oleobj/: Cargo.toml
oleobj/src/: main.rs  ole_object.rs
src/: constants.rs  directory.rs  error.rs  ftype.rs  header.rs  lib.rs
src/encryption/: excel.rs  mod.rs
