[package]
name = "oleobj"
version = "0.1.2"
description = "oleobj is a tool to parse OLE objects and files stored into various MS Office file formats (doc, xls, ppt, docx, xlsx, pptx, etc)."
authors = ["Marirs <marirs@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"


[dependencies]
log = "0.4.17"
simple_logger = "2.2.0"
clap = "3.2.16"
ole-common = {path="../common", features=["blocking"]}
tokio = {version="1.20.1", features=["full"]}